+ new/create in song controller + artist views/controller

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,6 @@
-
+<nav>
+  <%= link_to "+ Song", new_song_path %>
+</nav>
 <% @songs.each do |song| %>
   <div class="">
     <a class= "" href="/songs/<%=song.id%>"><%=song.title%></a>
