--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,8 +2,9 @@
   <%= f.label :title %>
   <%= f.text_field :title%>
 
-  <%= f.collection_select(:artist_id, Artist.all.order(:name), :id, :name ) %>
-
+  <!-- <%= f.collection_select(:artist_id, Artist.all.order(:name), :id, :name ) %> -->
+  <%= f.label :artist %>
+  <%= f.text_field :artist%>
 
   <%= f.label :num %>
   <%= f.text_field :num%>
