--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,13 @@
 
   <body>
     <header>
-      <h1>Welcome to SongBang!</h1>
+      <h1>SongBang!</h1>
+      <nav>
+        <%= link_to "Songs", songs_path %> | <%= link_to "Artists", artists_path%> | <%= link_to "Grooves",vibes_path%> | <%= link_to "Genres", genres_path%>
+      </nav>
     </header>
+
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
