--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,36 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+
 @import "bootstrap";
+
+// @media (min-width: 768px){
+// .navbar-toggle {
+//     display: none;
+// }}
+
+body {
+  background-color: #ecdef9 !important;
+}
+
+// .navbar-default .navbar-toggle {
+//     border-color: #ddd;
+// }
+// #navigation,.navbar .navbar-default
+#header-banner
+{
+  // border-top: 2px dotted blue;
+  // background:url("../images/microphone.jpg");
+  background-image: url("microphone.jpg") !important;
+  height: 300px;
+  background-size: 100% 100%;
+  color: white;
+  text-shadow: 2px 2px 3px red;
+}
+.affix {
+      top: 0;
+      width: 100%;
+      z-index: 9999 !important;
+  }
+
+.affix + .container-fluid {
+      padding-top: 70px;
+  }
