--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,11 @@ body {
 //     border-color: #ddd;
 // }
 // #navigation,.navbar .navbar-default
+.logo{
+  font-family: Pacifico, sans-serif;
+
+}
+
 #header-banner
 {
   // border-top: 2px dotted blue;
@@ -22,14 +27,23 @@ body {
   background-image: url("microphone.jpg") !important;
   height: 300px;
   background-size: 100% 100%;
+
+  text-align: center;
+}
+#header-banner h1{
   color: white;
-  text-shadow: 2px 2px 3px red;
+  text-shadow: 3px 3px 5px purple;
+  font-size:10em !important;
 }
 .affix {
       top: 0;
       width: 100%;
       z-index: 9999 !important;
   }
+
+.affix-top  .logo{
+  color: #222 !important;
+}
 
 .affix + .container-fluid {
       padding-top: 70px;
