--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,41 +6,44 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Damion|Fugaz+One|Gochi+Hand|Pacifico" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
   <body>
       <header>
+        <!-- https://www.w3schools.com/bootstrap/bootstrap_get_started.asp -->
         <div id="header-banner" class="container-fluid" >
-            <h1>SongBang! </h1>
+            <h1 class="logo">SongBang! </h1>
         </div>
-
-        <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
-  <ul class="nav ">
-    <!-- <li class="active"><a href="#">Basic Topnav</a></li> -->
-    <li><%= link_to "Songs", songs_path %></li>
-                      <li><%= link_to "Artists", artists_path%></li>
-                      <li><%= link_to "Grooves",vibes_path%></li>
-                      <li><%= link_to "Genres", genres_path%></li>
-  </ul>
-</nav>
-
+        <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="297">
+          <a class="navbar-brand navbar-left logo" href="#">SongBang!</a>
+          <ul class="nav nav-navbar nav-pills">
+            <li class="active"><%= link_to "Songs", songs_path %></li>
+            <li><%= link_to "Artists", artists_path%></li>
+            <li><%= link_to "Grooves",vibes_path%></li>
+            <li><%= link_to "Genres", genres_path%></li>
+          </ul>
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Find Song">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </nav>
       </header>
 
-
-      <div class="container-fluid center-block">
-
-      <main>
+      <main  class="container-fluid center-block">
         <p class="notice info"><%= notice %></p>
         <p class="alert warning"><%= alert %></p>
         <%= yield %>
       </main>
-    </div>
   </body>
 </html>
