--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,7 +1,17 @@
+<div class="index-view row">
 
-<h1>Songs by Genre</h1>
-<% @genres.each do |genre| %>
-  <div class="">
-    <a class= "" href="/genres/<%=genre.id%>"><%=genre.name%></a>
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <h1>Songs by Genre</h1>
+
+    <% @genres.each do |genre| %>
+      <div class="">
+        <a class= "index-link" href="/genres/<%=genre.id%>"><%=genre.name%></a>
+      </div>
+    <% end %>
+
+
   </div>
-<% end %>
+
+  <div class="col-md-2"></div>
+</div>
