--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1><%=@artist.name%></h1>
+    <h1>&#10036; <%=@artist.name%> &#10036;</h1>
 
     <% @songs.each do |song| %>
       <div class="show-info">
