--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1><%=@song.title%></h1>
+    <h1> &#10036; <%=@song.title%> &#10036;</h1>
     <img src="<%= @song.artist.img_url %>"/>
     <h2><%=@song.artist.name%></h2>
     <h4>Genre: <%=@song.genre.name%></h4>
