--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1>Artists</h1>
+    <h1>&#10036; Artists &#10036;</h1>
 
     <% @artists.each do |artist| %>
       <div class="">
