--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1>Songs by Genre</h1>
+    <h1>&#10036; Songs by Genre &#10036;</h1>
 
     <% @genres.each do |genre| %>
       <div class="">
