--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -3,12 +3,22 @@
   <div class="col-md-2"></div>
   <div class="col-md-8">
     <h1>&#10036; <%=@genre.name%> &#10036;</h1>
+    <table class= "table table-striped">
+      <tr>
+        <th>Song Name</th>
+        <th>Noraebang #</th>
+        <th>Likes</th>
+      </tr>
 
-    <% @songs.each do |song| %>
-      <div class="show-info">
-        <%=song.title%></a>
-      </div>
-    <% end %>
+      <% @songs.each do |song| %>
+      <tr>
+        <td><%=song.title%></td>
+        <td><%=song.num%></td>
+        <td><%=song.likes%></td>
+      </tr>
+
+      <% end %>
+    </table>
   </div>
 
   <div class="col-md-2"></div>
