--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,9 +74,13 @@ h1, h2, h3, h4, h5,h6{
 .show-view h1{
   text-align: center;
 }
-.index-link, .show-info {
+.table  a{
   color: #024082 !important;
   // font-size: 1.25vw;
+}
+.index-link {
+  color: white !important;
+  font-size: 1.5vw;
 }
 
 .btn {
