--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -13,7 +13,7 @@
 
       <% @songs.each do |song| %>
       <tr>
-        <td><a class= "index-link" href="/songs/<%=song.id%>"><%=song.title%></a></td>
+        <td><a class= "" href="/songs/<%=song.id%>"><%=song.title%></a></td>
         <td><%=song.artist.name%></td>
         <td><%=song.num%></td>
         <td><%=song.likes%></td>
