+ sort in artist song table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,6 +87,11 @@ h1, h2, h3, h4, h5,h6{
   box-shadow: 2px 2px 2px;
 }
 
+.show-info{
+  color: white;
+  font-size: 1.5vw;
+  
+}
 .table{
   background-color: #ddc7e2;
   color: white;
