--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -20,10 +20,15 @@
   <div class="col-md-8">
     <h1>&#10036; <%=@artist.name%> &#10036;</h1>
     <table class= "table table-striped">
+
       <tr>
-        <th>Song Name</th>
+        <th><%= sort_link "title" %></th>
+        <th><%= sort_link "num" %></th>
+        <th><%= sort_link "likes" %></th>
+
+        <!-- <th>Song Name</th>
         <th>Noraebang #</th>
-        <th>Likes</th>
+        <th>Likes</th> -->
       </tr>
 
       <% @songs.each do |song| %>
@@ -35,7 +40,7 @@
 
       <% end %>
     </table>
-    
+
   </div>
 
   <div class="col-md-2"></div>
