--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5,h6{
 {
   // border-top: 2px dotted blue;
   // background:url("../images/microphone.jpg");
-  background-image: url("microphone.jpg") !important;
+  background-image: url("blue_pink_mic.jpg") !important;
   height: 300px;
   background-size: 100% 100%;
 
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5,h6{
 .show-info{
   color: white;
   font-size: 1.5vw;
-  
+
 }
 .table{
   background-color: #ddc7e2;
