--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
             <li><%= link_to "Artists", artists_path%></li>
             <li><%= link_to "Vibes",vibes_path%></li>
             <li><%= link_to "Genres", genres_path%></li>
+            <li><%= link_to "About", about_path%></li>
+
           </ul>
           <form class="navbar-form navbar-right">
             <div class="form-group">
