--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -30,7 +30,9 @@
 
       <% @songs.each do |song| %>
       <tr>
-        <td><%=song.title%></td>
+        <td><a class= "" href="/songs/<%=song.id%>"><%=song.title%></a></td>
+
+        <!-- <td><%=song.title%></td> -->
         <td><%=song.num%></td>
         <td><%=song.likes%></td>
       </tr>
