--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SongBang</title>
+    <title>Songbang!</title>
     <%= csrf_meta_tags %>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -25,7 +25,7 @@
       <header>
         <!-- https://www.w3schools.com/bootstrap/bootstrap_get_started.asp -->
         <div id="header-banner" class="jumbotron container-fluid" >
-            <h1 class="logo">SongBang! </h1>
+            <h1 class="logo">Songbang! </h1>
             <!-- <h3>For Norabang Lovers</h3> -->
         </div>
         <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="297">
