--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,31 +1,40 @@
 <div class="show-view row">
 
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-    <h1> &#10036; <%=@song.title%> &#10036;</h1>
-    <img src="<%= @song.artist.img_url %>"/>
-    <h2>by <%= link_to @song.artist.name, artist_path(@song.artist)%></h2>
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <h1 class="song-title"> &#10036; <%=@song.title%> &#10036;</h1>
+    <!-- <img src="<%= @song.artist.img_url %>"/> -->
+    <h2 class="artist-title">by <%= link_to @song.artist.name, artist_path(@song.artist)%></h2>
 
     <h4>Genre: <%= link_to @song.genre.name, genre_path(@song.genre)%></h4>
     <h4>Noraebang #:  <%=@song.num%></h4>
 
-    <h4>The perfect song for:</h4>
-    <% @song.vibes.each do |vibe| %>
-      <div class="show-info">
-        <%= link_to vibe.name, vibe_path(vibe)%>
-      </div>
-    <% end %>
-    <h4>Likes: <%=@song.likes%></h4>
+
+    <h4>Likes: <%=@song.likes%>  <button class="btn btn-default like-btn" type="submit">
+      <%= link_to "Like!👍", liked_song_path(@song), method: :patch %>
+    </button></h4>
     <!-- Both of these methods do the same thing! -->
     <!-- <%= form_for @song, method: :patch do |f| %>
       <%= f.submit "Like!", class: 'btn btn-default'%>
     <% end %> -->
-    <button class="btn btn-default" type="submit">
-      <%= link_to "Like!👍", liked_song_path(@song), method: :patch %>
-    </button>
+
 
 
   </div>
 
-  <div class="col-md-2"></div>
+  <div class="col-md-3">
+    <div class="song-aside">
+
+    <h4>The perfect song for:</h4>
+    <% @song.vibes.each do |vibe| %>
+      <!-- <div class="show-info"> -->
+      <button class="btn btn-default vibe-btn" type="submit">
+        <%= link_to vibe.name, vibe_path(vibe)%>
+      </button>
+
+      <!-- </div> -->
+    <% end %>
+  </div>
+
+  </div>
 </div>
