--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,4 @@
-<h1>About Songbang!</h1>
+<h1 class="main-title">About Songbang!</h1>
 <h3> Songbang! is an app for Korean noraebang lovers.  The Korean word noraebang literally means song room and is a place to go sing karaoke privately with just your friends. </h3>
 <h3>Having a hard time at noraebang finding the number for the song you want to sing? Songbang! has user sourced information to make singing a breeze.
  Look for you favorite song by title, artist, genre, or vibe.  Don't see the song you're looking for?  If you find it, please add it to the collection.</h3>
