--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1>&#10036; Songs  &#10036; <button class="btn btn-default" type="submit"><%= link_to "+ Song", new_song_path %></button></h1>
+    <h1 class="main-title table-title">&#10036; Songs  &#10036; <button class="btn btn-default" type="submit"><%= link_to "+ Song", new_song_path %></button></h1>
     <table class= "table table-striped">
       <tr>
         <th><%= sort_link "title", "Song Title" %></th>
