--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,16 @@
 
 @import "bootstrap";
 
-// @media (min-width: 768px){
-// .navbar-toggle {
-//     display: none;
-// }}
+@media screen and (max-width: 700px) {
+  .nav {
+    font-size: 5vw !important;
+  }
+}
+@media screen and (min-width: 700px) {
+  .nav {
+    font-size: 1.5vw !important;
+  }
+}
 
 body {
   background-color: #032e72 !important;
@@ -16,19 +22,12 @@ h1, h2, h3, h4, h5,h6{
 
 }
 
-// .navbar-default .navbar-toggle {
-//     border-color: #ddd;
-// }
-// #navigation,.navbar .navbar-default
 .logo{
   font-family: 'Pacifico', cursive;
-
 }
 
 #header-banner
 {
-  // border-top: 2px dotted blue;
-  // background:url("../images/microphone.jpg");
   background-image: url("blue_pink_mic.jpg") !important;
   height: 300px;
   background-size: 100% 100%;
@@ -43,7 +42,6 @@ h1, h2, h3, h4, h5,h6{
   color: white;
   text-shadow: 3px 3px 5px blue;
   font-size:8vw !important;
-  // margin: 50px auto;
 }
 .affix {
       top: 0;
@@ -59,9 +57,9 @@ h1, h2, h3, h4, h5,h6{
       padding-top: 70px;
   }
 
-.nav {
-  font-size: 1.5vw;
-}
+// .nav {
+//   font-size: 1.5vw;
+// }
 
 .alert {
   color: red;
@@ -157,11 +155,8 @@ h1, h2, h3, h4, h5,h6{
 .table-striped{
   color:black;
 }
-main {
-  // margin-left:
-}
+
 
 form label{
   color: white !important;
-  // font-size: 1.5vw;
 }
