--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,26 @@
             <li><%= link_to "About", about_path%></li>
 
           </ul>
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
+         <!-- <form class="navbar-form navbar-right"> -->
+
+            <%= form_tag search_path, method: :get, html: {class: "form-group"} do %>
+              <%= text_field_tag :title, params[:title],html: {class: "form-control"} %>
+              <%= submit_tag 'Search', name: nil, html: {class: "btn btn-default"}%>
+            <% end %>
+
+
+<!-- <%= form_tag(search_path, method: "get") do %> -->
+  <!-- <%= label_tag(:title, "Search for:") %> -->
+  <!-- <%= text_field_tag(:title)%>
+  <%= submit_tag "Search" %>
+<% end %> -->
+
+            <!-- <div class="form-group">
               <input type="text" class="form-control" placeholder="Find Song">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+            <button type="submit" class="btn btn-default">
+              <%= link_to "Search", search_path(@song), method: :get %>
+            </button> -->
         </nav>
       </header>
 
