--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,9 +6,10 @@
   <%= f.label :artist %>
   <%= f.text_field :artist%>
 
-  <%= f.label 'Noraebang #' %>
+  <%= f.label :num, 'Noraebang #:' %>
   <%= f.text_field :num%>
 
+  <%= f.label :genre, 'Genre:' %>
   <%= f.collection_select(:genre_id, Genre.all.order(:name), :id, :name ) %>
 
   <!-- <%= f.collection_select(:vibe_ids, Vibe.all.order(:name), :id, :name ) %> -->
