--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,22 +1,27 @@
 <%= form_for @song do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title%>
+  <div class = 'row'>
+    <div class= "col s3">
+    <%= f.label :title, 'Title:' %>
+    <%= f.text_field :title%>
+</div>
+    <div class= "col s3">
+    <%= f.label :artist, 'Artist:' %>
+    <%= f.text_field :artist%>
+  </div>
+    <div class= "col s3">
+    <%= f.label :num, 'Noraebang #:' %>
+    <%= f.text_field :num%>
+    </div>
+    <div class= "col s3">
 
-  <!-- <%= f.collection_select(:artist_id, Artist.all.order(:name), :id, :name ) %> -->
-  <%= f.label :artist %>
-  <%= f.text_field :artist%>
+    </div>
+</div>
+</br>
 
-  <%= f.label :num, 'Noraebang #:' %>
-  <%= f.text_field :num%>
-
-  <%= f.label :genre, 'Genre:' %>
-  <%= f.collection_select(:genre_id, Genre.all.order(:name), :id, :name ) %>
-
-  <!-- <%= f.collection_select(:vibe_ids, Vibe.all.order(:name), :id, :name ) %> -->
+<%= f.label :genre, 'Genre:' %>
+<%= f.collection_select(:genre_id, Genre.all.order(:name), :id, :name ) %>
 </br>
 <!-- https://www.sitepoint.com/save-multiple-checkbox-values-database-rails/ -->
-
-<!-- <div class="field"> -->
 
   <h3><%= f.label "This Song is Perfect For:" %><br /> </h3>
   <%= f.collection_check_boxes :vibe_ids, Vibe.all, :id, :name do |b| %>
@@ -25,7 +30,6 @@
       <%= b.label %>
     </div>
   <% end %>
-<!-- </div> -->
 
     <!-- <%=Vibe.all.order(:name).each do |vibe| %>
       <%= f.check_box( :vibe_ids, { multiple: true }, vibe.id, false )%>
