--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
          <!-- <form class="navbar-form navbar-right"> -->
 
             <%= form_tag search_path, method: :get, html: {class: "form-group"} do %>
-              <%= text_field_tag :title, params[:title],html: {class: "form-control"} %>
+              <%= text_field_tag :title, params[:title],
+                  html: {class: "form-control"} %>
               <%= submit_tag 'Search', name: nil, html: {class: "btn btn-default"}%>
             <% end %>
 
