--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,20 +1,20 @@
 <%= form_for @song do |f| %>
   <div class = 'row'>
-    <div class= "col s3">
+    <div class= "col s4">
     <%= f.label :title, 'Title:' %>
     <%= f.text_field :title%>
 </div>
-    <div class= "col s3">
+    <div class= "col s4">
     <%= f.label :artist, 'Artist:' %>
     <%= f.text_field :artist%>
   </div>
-    <div class= "col s3">
+    <div class= "col s4">
     <%= f.label :num, 'Noraebang #:' %>
     <%= f.text_field :num%>
     </div>
-    <div class= "col s3">
+    <!-- <div class= "col s3">
 
-    </div>
+    </div> -->
 </div>
 </br>
 
