--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,10 @@
           </ul>
          <!-- <form class="navbar-form navbar-right"> -->
 
-            <%= form_tag search_path, method: :get, html: {class: "form-group"} do %>
+            <%= form_tag search_path, method: :get,
+             html: {class: "form-group"} do %>
               <%= text_field_tag :title, params[:title],
-                  html: {class: "form-control"} %>
+                  html: {class: "form-control"}, placeholder: "Find Song" %>
               <%= submit_tag 'Search', name: nil, html: {class: "btn btn-default"}%>
             <% end %>
 
